feat: Enhance UI and add session logging
Introduce tactical UI enhancements with deeper colors and new animations. Add viewport-fit=cover for improved mobile display.

Implement structured data types for session logs, including UV index tracking and new settings for vibration intensity.

Refactor SessionMode to incorporate haptic feedback control and an abort modal. Introduce CalendarView and BodyHeatmap components for enhanced data visualization.

Update App.tsx to integrate new UI components and improve state management. Add download functionality for session logs.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>IPL Tracker Elite</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -16,9 +16,9 @@
             },
             colors: {
               tactical: {
-                900: '#0a0a0a',
-                800: '#121212',
-                700: '#1a1a1a',
+                900: '#050505', // Deep Black
+                800: '#0a0f0d', // Dark Green tint
+                700: '#141a17',
                 green: '#10b981',
                 dim: '#064e3b',
                 alert: '#ef4444',
@@ -28,11 +28,16 @@
             animation: {
               'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
               'scanline': 'scanline 8s linear infinite',
+              'blink': 'blink 1.5s infinite step-end',
             },
             keyframes: {
               scanline: {
                 '0%': { transform: 'translateY(-100%)' },
                 '100%': { transform: 'translateY(100%)' },
+              },
+              blink: {
+                '0%, 100%': { opacity: 1 },
+                '50%': { opacity: 0 },
               }
             }
           }
@@ -41,24 +46,35 @@
     </script>
     <style>
       body {
-        background-color: #050505;
+        background-color: #000000;
         color: #e5e5e5;
         overscroll-behavior-y: none;
+        /* Safe Area Support */
+        padding-bottom: env(safe-area-inset-bottom);
       }
-      /* Custom Scrollbar for Tactical Look */
-      ::-webkit-scrollbar {
-        width: 6px;
+
+      /* Noise Effect */
+      .bg-noise {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        pointer-events: none;
+        z-index: 5;
+        opacity: 0.03;
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
       }
-      ::-webkit-scrollbar-track {
-        background: #0a0a0a;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #333;
-        border-radius: 2px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #10b981;
-      }
+
+      /* Custom Scrollbar */
+      ::-webkit-scrollbar { width: 4px; }
+      ::-webkit-scrollbar-track { background: #000; }
+      ::-webkit-scrollbar-thumb { background: #333; }
+      ::-webkit-scrollbar-thumb:hover { background: #10b981; }
+
+      /* Safe Area Padding Utilities */
+      .pb-safe { padding-bottom: env(safe-area-inset-bottom); }
+      .pt-safe { padding-top: env(safe-area-inset-top); }
     </style>
   <script type="importmap">
 {
@@ -73,6 +89,7 @@
 </script>
 </head>
   <body>
+    <div class="bg-noise"></div>
     <div id="root"></div>
   </body>
 </html>
