fix: Update dependencies and Tailwind CDN comment
Updates `google/genai` to `latest` and `lucide-react` to a newer version. Also clarifies the comment regarding the Tailwind CDN usage.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="./manifest.json">
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2312/2312216.png">
     
-    <!-- Tailwind via CDN (Kept for simplicity) -->
+    <!-- Tailwind via CDN (Still useful for rapid styling without full postcss setup) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     
